fix dictionary and homework

--- a/frontend/src/app/components/profile/dictionary/dictionary.component.css
+++ b/frontend/src/app/components/profile/dictionary/dictionary.component.css
@@ -1,14 +1,14 @@
 td.hidden-text::before {
   content: "****";
 }
-td.hidden-text p{
+td.hidden-text p {
   display: none;
 }
 
-form {
+.custom-form {
   display: inline-block;
   border: 1px solid black;
-  max-width: fit-content; 
+  max-width: fit-content;
   background-color: #fff;
   padding: 10px;
   border-radius: 10px;
@@ -17,4 +17,31 @@ form {
 
 label {
   font-weight: 600;
+}
+
+.table {
+  text-align: center;
+  border: 2px solid rgb(175, 176, 180);
+}
+
+.table thead th {
+  background-color: #ededed;
+}
+
+#search-input {
+  width: 100%;
+  box-sizing: border-box;
+  border: 2px solid var(--new-blue);
+  border-radius: 15px;
+  background-color: white;
+  background-image: url("../../../../assets/profile/search.svg");
+  background-size: 12px;
+  background-position: 10px 10px;
+  background-repeat: no-repeat;
+  padding: 5px 5px 5px 30px;
+}
+#search-input:active,
+#search-input:focus {
+  border: 2px solid var(--new-blue);
+  outline: none;
 }
