--- a/frontend/src/app/components/profile/profile.component.html
+++ b/frontend/src/app/components/profile/profile.component.html
@@ -83,27 +83,50 @@
       <i class="bi bi-list"></i>
     </button>
 
-    <form (ngSubmit)="changePage(searchValue)" id="search-form">
-      <input
-        list="pages"
-        name="search"
-        id="search-input"
-        placeholder="Знайти"
-        [(ngModel)]="searchValue"
-        required
-      />
-
-      <datalist id="pages">
-        <option value="Розклад"></option>
-        <option value="Додати заняття"></option>
-        <option value="Всі завдання"></option>
-        <option value="Додати завдання"></option>
-        <option value="Словник"></option>
-        <option value="Оновити словник"></option>
-        <option value="Учні"></option>
-        <option value="Заявки"></option>
-      </datalist>
-    </form>
+    <nav aria-label="breadcrumb">
+      <ol class="breadcrumb">
+        <li class="breadcrumb-item">Мій профіль</li>
+        <li *ngIf="getCurrentUrl() == '/home'" class="breadcrumb-item">
+          Головна
+        </li>
+        <li *ngIf="getCurrentUrl() == '/home/schedule'" class="breadcrumb-item">
+          Розклад
+        </li>
+        <li *ngIf="getCurrentUrl() == '/home/tasks'" class="breadcrumb-item">
+          Домашні завдання
+        </li>
+        <li
+          *ngIf="getCurrentUrl() == '/home/dictionary'"
+          class="breadcrumb-item"
+        >
+          Словник
+        </li>
+        <li *ngIf="getCurrentUrl() == '/home/settings'" class="breadcrumb-item">
+          Налаштування
+        </li>
+        <li *ngIf="getCurrentUrl() == '/home/new-word'" class="breadcrumb-item">
+          Додати слово
+        </li>
+        <li *ngIf="getCurrentUrl() == '/home/new-task'" class="breadcrumb-item">
+          Додати завдання
+        </li>
+        <li
+          *ngIf="getCurrentUrl() == '/home/new-class'"
+          class="breadcrumb-item"
+        >
+          Додати заняття
+        </li>
+        <li *ngIf="getCurrentUrl() == '/home/students'" class="breadcrumb-item">
+          Учні
+        </li>
+        <li
+          *ngIf="getCurrentUrl() == '/home/applications'"
+          class="breadcrumb-item"
+        >
+          Заявки
+        </li>
+      </ol>
+    </nav>
   </div>
 
   <div #homeContent class="home-main-page">
@@ -120,10 +143,22 @@
         <div style="display: flex; flex-direction: column">
           <h3 class="mb-0">Вітаємо, {{ username }} ✨</h3>
           <p
+            *ngIf="isTeacher; else studentP"
             style="font-size: 15px; color: rgb(92, 92, 92); font-family: nunito"
           >
             Зареєстровані як вчитель
           </p>
+          <ng-template #studentP>
+            <p
+              style="
+                font-size: 15px;
+                color: rgb(92, 92, 92);
+                font-family: nunito;
+              "
+            >
+              Зареєстровані як учень
+            </p>
+          </ng-template>
         </div>
       </div>
 
