--- a/frontend/src/app/components/profile/tasks/tasks.component.css
+++ b/frontend/src/app/components/profile/tasks/tasks.component.css
@@ -1,41 +1,25 @@
-:host {
-  width: 100%;
-}
-
-h2 {
-  color: var(--dark-blue);
-}
-
 .tree {
   --spacing: 1.5rem;
   --radius: 10px;
-  background-color: #fff;
-  padding: 20px;
-  border-radius: 10px;
-  box-shadow: var(--shadow);
+  width: 500px;
 }
-
 .tree li {
   display: block;
   position: relative;
   padding-left: calc(2 * var(--spacing) - var(--radius) - 2px);
 }
-
 .tree ul {
   margin-left: calc(var(--radius) - var(--spacing));
   padding-left: 0;
 }
-
 .tree ul li {
   border-left: 2px solid #ddd;
 }
-
 .tree ul li:last-child {
   border-color: transparent;
 }
-
 .tree ul li::before {
-  content: '';
+  content: "";
   display: block;
   position: absolute;
   top: calc(var(--spacing) / -2);
@@ -60,29 +44,29 @@ summary {
 }
 
 .task-card {
-  width: 40%;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  justify-content: space-between;
   background-color: #fff;
-  border-radius: 10px;
+  border-radius: 20px;
+  padding: 20px;
   box-shadow: var(--shadow);
-  padding: 10px;
+  height: 350px;
 }
 
-@media screen and (max-width: 870px){
+@media screen and (max-width: 870px) {
   .task-card {
     width: 60%;
   }
 }
 
-@media screen and (max-width: 565px){
+@media screen and (max-width: 565px) {
   .task-card {
     width: 80%;
   }
 }
 
-@media screen and (max-width: 380px){
+@media screen and (max-width: 380px) {
   .task-card {
     width: 95%;
   }
