--- a/frontend/src/app/components/profile/teacher/new-task/new-task.component.html
+++ b/frontend/src/app/components/profile/teacher/new-task/new-task.component.html
@@ -1,72 +1,34 @@
-<div
-  *ngIf="showErrorMsg"
-  class="alert alert-danger d-flex align-items-center gap-3"
-  role="alert"
->
-  <div>Помилка! Спробуйте ще раз</div>
-  <button
-    type="button"
-    class="btn-close"
-    data-bs-dismiss="alert"
-    aria-label="Close"
-    (click)="showErrorMsg = !showErrorMsg"
-  ></button>
-</div>
-<div
-  *ngIf="showSuccessMsg"
-  class="alert alert-success d-flex align-items-center gap-3"
-  role="alert"
->
-  <div>Домашнє завдання створено!</div>
-  <button
-    type="button"
-    class="btn-close"
-    data-bs-dismiss="alert"
-    aria-label="Close"
-    (click)="showSuccessMsg = !showSuccessMsg"
-  ></button>
-</div>
 <div class="class-card">
+  <h5 class="text-xcenter my-0">Нове домашнє завдання ✍️</h5>
+  <hr />
   <form [formGroup]="newTaskForm" (ngSubmit)="onSubmit()">
-    <legend>Нове домашнє завдання</legend>
-
     <!-- Student name field -->
     <fieldset>
-      <label for="student-select">Виберіть учня</label>
+      <label for="student-select">Виберіть учня:</label>
       <select
-        formControlName="student"
-        [class.is-invalid]="
-          student.value == 'default' && (student.dirty || student.touched)
+        formControlName="studentId"
+        [class.mark-invalid]="
+          studentId.value == 'default' && (studentId.dirty || studentId.touched)
         "
         id="student-select"
         class="form-select"
       >
         <option selected disabled value="default"></option>
-        <option
-          *ngFor="let s of students$ | async"
-          value="{{ s.id }} {{ s.name }}"
-        >
+        <option *ngFor="let s of students$ | async" value="{{ s.id }}">
           {{ s.name }}
         </option>
       </select>
-      <div id="validationServer05Feedback" class="invalid-feedback">
-        <span
-          class="error-span"
-          *ngIf="
-            student.value == 'default' && (student.dirty || student.touched)
-          "
-          >Це поле є обов'язковим</span
-        >
-      </div>
     </fieldset>
 
     <!-- Due date field -->
     <fieldset>
-      <label for="class-time-start">Виконати до</label>
+      <label for="class-time-start">Виконати до:</label>
       <input
         id="class-time-start"
-        [class.is-invalid]="date.invalid && (date.dirty || date.touched)"
-        formControlName="date"
+        [class.mark-invalid]="
+          dueDate.invalid && (dueDate.dirty || dueDate.touched)
+        "
+        formControlName="dueDate"
         type="datetime-local"
         class="form-control"
       />
@@ -74,35 +36,24 @@
   </form>
 
   <!-- Content field -->
-  <div class="content-field">
-    <p>Завдання</p>
-    <st-editor
-      #contentInput="ngModel"
-      required=""
-      [class.is-invalid]="
-        content === '' && (contentInput.dirty || contentInput.touched)
-      "
-      class="form-control"
-      [(ngModel)]="content"
-      [config]="config"
-    ></st-editor>
-    <div class="invalid-feedback">
-      <span
-        class="error-span"
-        *ngIf="content == '' && (contentInput.dirty || contentInput.touched)"
-        >Це поле є обов'язковим</span
-      >
-    </div>
-  </div>
+  <st-editor
+    #contentInput="ngModel"
+    required=""
+    [class.is-invalid]="
+      content === '' && (contentInput.dirty || contentInput.touched)
+    "
+    [(ngModel)]="content"
+    [config]="config"
+  ></st-editor>
 
-  <div class="w-100 d-flex justify-content-center">
+  <div class="w-100 mt-2 d-flex justify-content-center">
     <button
       (click)="onSubmit()"
       *ngIf="!awaitingResponse; else loadingBtn"
       type="button"
-      class="cta"
+      class="outline-btn"
     >
-      Створити
+      Зберегти
     </button>
     <ng-template #loadingBtn>
       <button class="cta" type="button" disabled>
