--- a/frontend/src/app/components/profile/teacher/new-class/new-class.component.css
+++ b/frontend/src/app/components/profile/teacher/new-class/new-class.component.css
@@ -1,6 +1,4 @@
 :host {
-  width: 100%;
-  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -12,26 +10,54 @@
   padding: 10px;
   background-color: #fff;
   display: flex;
+  flex-direction: column;
   justify-content: center;
-  width: 80%;
   border-radius: 20px;
   box-shadow: var(--shadow);
+  padding: 10px 30px 30px 30px;
 }
 
 form {
-  width: 80%;
+  margin-top: 0;
+  width: 100%;
+  font-family: nunito !important;
+  font-size: 14px;
 }
 
-legend {
+h5 {
   text-align: center;
-  margin-bottom: 20px;
-  color: var(--dark-blue);
-  font-family: montserrat-medium;
+  font-family: montserrat-bold;
 }
 
 fieldset {
   display: flex;
-  flex-direction: column;
-  width: 100%;
-  margin: 30px;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 30px;
+  margin: 10px;
+}
+fieldset input,
+fieldset select {
+  width: 200px;
+}
+fieldset label {
+  width: 110px;
+}
+
+.mark-invalid {
+  border: 1px solid red;
+}
+
+.outline-btn {
+  border: 2px solid #1f8e00;
+  border-radius: 8px;
+  padding: 5px;
+  font-family: nunito;
+  transition: 0.7s ease;
+  cursor: pointer;
+  background-color: #35ad14;
+  color: white;
+}
+.outline-btn:hover {
+  background-color: #2c8613;
 }
