--- a/frontend/src/app/components/profile/schedule/schedule.component.css
+++ b/frontend/src/app/components/profile/schedule/schedule.component.css
@@ -1,9 +1,12 @@
 :host {
   width: 100%;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   background-color: #fff;
+  border-radius: 15px;
+  margin-top: 15px;
 }
 
 full-calendar {
@@ -14,3 +17,8 @@ full-calendar {
   display: none;
 }
 
+.teacher-hint {
+  color: black;
+  font-style: oblique;
+  font-weight: 600;
+}
