--- a/frontend/src/app/components/profile/teacher/new-class/new-class.component.css
+++ b/frontend/src/app/components/profile/teacher/new-class/new-class.component.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 30px;
+  padding: 10px;
 }
 
 .class-card {
@@ -15,6 +15,7 @@
   border-radius: 20px;
   box-shadow: var(--shadow);
   padding: 10px 30px 30px 30px;
+  border: 2px solid var(--dark-blue);
 }
 
 form {
@@ -31,7 +32,7 @@ h5 {
 
 fieldset {
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-between;
   align-items: center;
   gap: 30px;
   margin: 10px;
@@ -60,4 +61,26 @@ fieldset label {
 }
 .outline-btn:hover {
   background-color: #2c8613;
+}
+
+.teacher-hint {
+  color: black;
+  font-style: oblique;
+  font-weight: 600
+}
+
+@media screen and (max-width: 460px) {
+  :host{
+    padding: 0;
+  }
+  
+  .class-card {
+    padding: 5px;
+    width: 100%;
+  }
+
+  fieldset {
+    flex-direction: column;
+    gap: 0px;
+  }
 }
