--- a/frontend/src/app/components/signup/signup.component.css
+++ b/frontend/src/app/components/signup/signup.component.css
@@ -9,7 +9,7 @@ section {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-family: montserrat-medium;
+  font-family: nunito;
   background-color: var(--light-blue);
   padding: 30px;
 }
@@ -75,6 +75,6 @@ img {
   }
 
   legend {
-    font-size: 17px;
+    font-size: 13px;
   }
 }
